--- a/main.css
+++ b/main.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1 solid black;
     font-family: 'Roboto', sans-serif; 
 }
 
@@ -13,6 +12,7 @@
     --color-grey: #cccccc;
     --additional-grey: #ABABAB;
     --color-text: black;
+    --color-white: rgb(252, 252, 252);
  }
 
 body {
@@ -111,19 +111,152 @@ ul {
 }
 /*=======articles======*/
 
-.book_section {
+.about {
     width: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px 50px 20px 50px;
 }
 
-.about {
+.description {
     padding: 20px 50px 20px 50px; 
+}
+h2 {
+    color: var(--main-color);
+    font-size: 27px;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+h3 {
+    color: var(--color-grey);
+    font-size: 22px;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+ .description_first_p {
+    font-size: 14px;
+    padding-bottom: 10px;
+ }
+
+ .description_second_p {
+    font-size: 14px;
+    color: var(--color-grey);
+    padding-bottom: 20px;
+ }
+
+ .btn_comprar {
+    width: 180px;
+    height: 35px;
+    background-color: var(--main-color);
+    font-size: 14px;
+    color: var(--secondary-color);
+    padding: 5px;
+    border: none;
+    border-radius: 3px;
+ }
+
+/*=======you may also like======*/
+
+.section_may_like {
+    width: 100%;
+    background-color: var(--secondary-color);
+    padding: 20px 50px 20px 50px;
+}
+
+.books_cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+}
+.book {
+ height: 190px;
+}
+
+/*=======footer======*/
+
+footer {
+    background-color: var(--main-color);
+    width: 100vw;  
+    display: flex;
+    flex-direction: column;
+    position: relative; 
+}
+.logo_footer {
+    color: var(--secondary-color);
+    font-size: 25px;
+    font-weight: 600;
+    padding-left: 30px;
+    padding-top: 30px;
+}
+
+.h3-footer {
+    font-size: 18px;
+    color: var(--secondary-color);
+    text-align: left;
+    padding-top: 30px;
+    margin-left: 146px;
+   
 }
 
 
+.text-footer a {
+    font-size: 14px;
+    color: var(--secondary-color);
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
+    margin-left: 146px;  
+    padding-bottom: 2px;   
+}
 
+.text-footer a:hover {
+    text-decoration: underline;
+}
+
+.icons-footer {
+width: 24px;
+height: 26px;
+position: relative;
+display: flex;
+flex-direction: row;
+padding: 5px 5px 5px 5px;
+list-style: none;
+gap: 15px;
+text-decoration: none;
+margin-left: 141px; 
+padding-top: 10px;
+padding-bottom: 40px;
+
+}
+.linkedin {
+color: var(--secondary-color);
+}
+.instagram {
+color: var(--secondary-color);
+ }
+.twitter {
+color: var(--secondary-color);
+}   
+
+.icons-footer a:hover {
+    transform: scale(1.2);
+}
+
+.arrow {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 24px;
+    height: 24px;
+    margin-bottom: 16px;
+    margin-right: 20px;   
+}
+
+.arrow-2 {
+    color: var(--secondary-color);
+    }
 
 /*=======breakpoints======*/
 
