--- a/main.css
+++ b/main.css
@@ -347,9 +347,7 @@ color: var(--secondary-color);
 .description {
     padding: 20px 100px 20px 100px; 
 }
-
-
-
+sk
 .section_may_like {
     padding: 20px 100px 40px 100px;
 }
